# todoist-voice-assistant

./: .gitignore  README.md  pyproject.toml
app/: config.py  llm_tools.py  main.py  test_pyaudio.py  todoist_client.py
